--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.2.1",
     "vite": "^3.2.0"
   }
