--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "material-tailwind-kit-react",
+  "name": "seansite-tailwind",
   "private": true,
   "version": "2.0.0",
   "homepage": "https://squadronroe.github.io/seansite-tailwind/",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -29,7 +28,6 @@
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.2.1",
     "vite": "^3.2.0"
   }
